// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`beasties > basic Usage 1`] = `
"<html data-beasties-container>
  <head>
    <style>h1{color:blue}p{color:purple}</style><link rel="preload" href="/style.css" as="style">
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  <link rel="stylesheet" href="/style.css"></body>
</html>"
`;

exports[`beasties > prevent injection via media attr 1`] = `
"<html>
<link>
<title>Testing</title>
<style>h1{color:blue}p{color:purple}.contents{padding:50px;text-align:center}.input-field{padding:10px}.custom-element::part(tab){color:#0c0dcc;border-bottom:transparent solid 2px}.custom-element::part(tab):hover:active{background-color:#0c0d33;color:#ffffff}.custom-element::part(tab):focus{box-shadow:0 0 0 1px #0a84ff inset, 0 0 0 1px #0a84ff,
    0 0 0 4px rgba(10, 132, 255, 0.3)}div:is(:hover, .active){color:#000}div:is(.selected, :hover){color:#fff}body{height:100%}</style><link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css" media="alert(1)"></noscript>

<link rel="stylesheet" href="styles2.css" media="print" onload="this.media='screen and (min-width: 480px)'"><noscript><link rel="stylesheet" href="styles2.css" media="screen and (min-width: 480px)"></noscript>



<body>
  <div class="container">
    <header>
      <div class="banner">Lorem ipsum dolor sit amet</div>
    </header>
  </div>
  <div class data-beasties-container>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
    <input class="input-field">
    <div class="contents"></div>
    <div class="selected active"></div>
  </div>
  <footer class></footer>
</body>

</html>
"
`;

exports[`beasties > run on HTML file 1`] = `
"<html>
  <head>
    <title>Testing</title>
    <style>h1{color:blue}p{color:purple}.contents{padding:50px;text-align:center}.input-field{padding:10px}.custom-element::part(tab){color:#0c0dcc;border-bottom:transparent solid 2px}.custom-element::part(tab):hover:active{background-color:#0c0d33;color:#ffffff}.custom-element::part(tab):focus{box-shadow:0 0 0 1px #0a84ff inset, 0 0 0 1px #0a84ff,
    0 0 0 4px rgba(10, 132, 255, 0.3)}div:is(:hover, .active){color:#000}div:is(.selected, :hover){color:#fff}</style><link rel="preload" href="styles.css" as="style">
  </head>
  <body>
    <div class="container">
      <header>
        <div class="banner">Lorem ipsum dolor sit amet</div>
      </header>
    </div>
    <div class data-beasties-container>
      <h1>Hello World!</h1>
      <p>This is a paragraph</p>
      <input class="input-field">
      <div class="contents"></div>
      <div class="selected active"></div>
    </div>
    <footer class></footer>
  <link rel="stylesheet" href="styles.css"></body>
</html>
"
`;

exports[`beasties > should keep existing link tag attributes 1`] = `
"<html data-beasties-container>
  <head>
    <title>$title</title>
    <style>h1{color:blue}</style><link rel="preload" href="/style.css" crossorigin="anonymous" integrity="sha384-j1GsrLo96tLqzfCY+" as="style">
  </head>
  <body>
    <h1>Hello World!</h1>
  <link rel="stylesheet" href="/style.css" crossorigin="anonymous" integrity="sha384-j1GsrLo96tLqzfCY+"></body>
</html>"
`;

exports[`beasties > should keep existing link tag attributes in the noscript link 1`] = `
"<html data-beasties-container>
  <head>
    <title>$title</title>
    <style>h1{color:blue}</style><link rel="stylesheet" href="/style.css" crossorigin="anonymous" integrity="sha384-j1GsrLo96tLqzfCY+" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/style.css" crossorigin="anonymous" integrity="sha384-j1GsrLo96tLqzfCY+"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
  </body>
</html>"
`;

exports[`beasties > skip invalid path 1`] = `
"<html>
<link>
<title>Testing</title>
<style>h1{color:blue}p{color:purple}.contents{padding:50px;text-align:center}.input-field{padding:10px}.custom-element::part(tab){color:#0c0dcc;border-bottom:transparent solid 2px}.custom-element::part(tab):hover:active{background-color:#0c0d33;color:#ffffff}.custom-element::part(tab):focus{box-shadow:0 0 0 1px #0a84ff inset, 0 0 0 1px #0a84ff,
    0 0 0 4px rgba(10, 132, 255, 0.3)}div:is(:hover, .active){color:#000}div:is(.selected, :hover){color:#fff}</style><link rel="preload" href="styles.css" as="style">

<link rel="stylesheet" href="../../../../../style3.css">



<body>
  <div class="container">
    <header>
      <div class="banner">Lorem ipsum dolor sit amet</div>
    </header>
  </div>
  <div class data-beasties-container>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
    <input class="input-field">
    <div class="contents"></div>
    <div class="selected active"></div>
  </div>
  <footer class></footer>
<link rel="stylesheet" href="styles.css"></body>

</html>
"
`;

exports[`beasties > works with pseudo classes and elements 1`] = `
"<html data-beasties-container>
  <head>
    <style>h1{color:blue}h1:has(+ p){margin-bottom:0}p{color:purple}p:only-child{color:fuchsia}input:where(:not([readonly])):where(:active, :focus, :focus-visible, [data-focused]){color:blue}</style><link rel="preload" href="/style.css" as="style">
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
    <input type="text">
  <link rel="stylesheet" href="/style.css"></body>
</html>"
`;

exports[`preload modes > should handle "false" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="stylesheet" href="/style.css">
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "js" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="preload" href="/style.css" as="style"><noscript><link rel="stylesheet" href="/style.css"></noscript><script data-href="/style.css" data-media="all">function $loadcss(u,m,l){(l=document.createElement('link')).rel='stylesheet';l.href=u;document.head.appendChild(l)}$loadcss(document.currentScript.dataset.href,document.currentScript.dataset.media)</script>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "media" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="preload" href="/style.css" onload="this.rel='stylesheet'" as="style"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap-high" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="alternate stylesheet preload" href="/style.css" title="styles" onload="this.title='';this.rel='stylesheet'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;

exports[`preload modes > should use "swap-low" preload mode correctly 1`] = `
"
      <html data-beasties-container>
        <head>
          <style>h1{color:blue}</style><link rel="alternate stylesheet" href="/style.css" title="styles" onload="this.title='';this.rel='stylesheet'"><noscript><link rel="stylesheet" href="/style.css"></noscript>
        </head>
        <body>
          <h1>Hello World!</h1>
        </body>
      </html>
    "
`;
